--- a/style/main.css
+++ b/style/main.css
@@ -1,34 +1,87 @@
+/* Импорт стилей, шрифтов и иконок */
+/* Сброс CSS */
 @import url("https://marksheet.io/css/reset.css");
 
-h1 {
-    font-size: 20px;
-    color: darkred;
-}
-/*Responsive разметка*/
-https://github.com/cdod4/site/blob/master/responsive.css
 
-/*Контейнер для содержимого страницы*/
-.container{
+/* Базовые стили */
+html {
+    height: 100%;
+}
+body {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+.container {
+    display: flex;
     width: 100%;
-    max-width: 1024px;
+    max-width: 1024px; /*максимальная ширина может иметь другое значение*/
     padding: 0 15px;
     margin: 0 auto;
 }
-/*Гланое меню в шапке*/
+
+
+/* Предустановки */
+.row {
+    display: flex;
+    flex-direction: row;
+}
+.column {
+    display: flex;
+    flex-direction: column;
+}
 nav ul {
     margin: 0;
     padding: 0;
     list-style: none;
+}
+
+
+/* Гибкая верстка */
+img {
+    width: 100%;
+    max-width: 100%;
+}
+.col-1 {
+    flex: 1;
+}
+.col-2 {
+    flex: 2;
+}
+.col-3 {
+    flex: 3;
+}
+.col-4 {
+    flex: 4;
+}
+.col-5 {
+    flex: 5;
+}
+
+
+/* Шапка сайта */
+header {
+    flex: 0 0 auto;
+}
+
+
+/* Основное содержимое */
+main {
     display: flex;
+    flex: 1 0 auto;
 }
-/*Главное меню в подвале*/
-footer > nav {
-    display: flex;
+main > div.container {
+    flex: 1 0 auto;
 }
-/*Предустановки для разметки flex-элементов: row - горизонтально, column - вертикально*/
-.row{
-    flex-direction: row;
+section {
+
 }
-.column{
-    flex-direction: column;
+aside {
+
+}
+
+
+/* Подвал сайта */
+footer {
+    flex: 0 0 auto;
 }
