--- a/style/main.css
+++ b/style/main.css
@@ -3,6 +3,8 @@
 @import url("https://marksheet.io/css/reset.css");
 
 
+
+
 /* Базовые стили */
 html {
     height: 100%;
@@ -63,11 +65,17 @@ img {
     }
 }
 
+
 /* Шапка сайта */
 header {
     flex: 0 0 auto;
     background-color: navy;
-    height: 100px
+    height: 100px;
+    color: white;
+}
+header > div.container {
+    height: 100%;
+    align-items: center;
 }
 
 
