--- a/style/main.css
+++ b/style/main.css
@@ -77,7 +77,9 @@ header > div.container {
     height: 100%;
     align-items: center;
 }
-
+header ul li {
+    margin-right: 20px;
+}
 
 /* Основное содержимое */
 main {
@@ -109,4 +111,7 @@ footer {
 footer > div.container {
     height: 100%;
     padding: 10px 0;
+}
+footer nav ul {
+    margin-right: 30px;
 }
