--- a/style/main.css
+++ b/style/main.css
@@ -69,7 +69,7 @@ img {
 /* Шапка сайта */
 header {
     flex: 0 0 auto;
-    background-color: navy;
+    background-color: black;
     height: 100px;
     color: white;
 }
@@ -89,7 +89,7 @@ main {
 }
 main > div.container {
     flex: 1 0 auto;
-    background-color: white;
+    background-color: black;
 }
 section {
     flex: 3 0 auto;
@@ -104,7 +104,7 @@ aside {
 /* Подвал сайта */
 footer {
     flex: 0 0 auto;
-    background-color: navy;
+    background-color: black;
     height: 300px;
     color: white;
 }
