--- a/style/main.css
+++ b/style/main.css
@@ -132,7 +132,7 @@ aside {
     padding: 0 15px;
 }
 aside a {
-    color: white;
+    color: black;
     text-decoration: none;
 }
 aside a:hover {
