--- a/style/main.css
+++ b/style/main.css
@@ -43,6 +43,26 @@ h1 {
     font-size: 2.4em;
     padding: .8em 0 1.2em 0;
 }
+h2 {
+    font-size: 2.2em;
+    padding: .8em 0 1.0em 0;
+}
+h3 {
+    font-size: 2.0em;
+    padding: .8em 0 0.8em 0;
+}
+h4 {
+    font-size: 1.8em;
+    padding: .8em 0 0.6em 0;
+}
+h5 {
+    font-size: 1.6em;
+    padding: .8em 0 0.6em 0;
+}
+h5 {
+    font-size: 1.4em;
+    padding: .8em 0 0.6em 0;
+}
 
 
 /* Предустановки */
