--- a/style/main.css
+++ b/style/main.css
@@ -23,6 +23,17 @@ body {
     background-color: #888;
 }
 .container {
+    display: flex;
+    width: 100%;
+    max-width: 1200px; /*максимальная ширина может иметь другое значение*/
+    padding: 0 15px;
+    margin: 0 auto;
+}
+.button {
+    height: 50px;
+    /*width:100px;*/
+}
+.container {
     padding: 0 15px;
 }
 body {
