--- a/style/main.css
+++ b/style/main.css
@@ -22,6 +22,11 @@ body {
 .button:hover {
     background-color: #888;
 }
+.button {
+    height: 50px;
+    background-color: red;
+    border-radius: 5px;
+}
 .container {
     display: flex;
     width: 100%;
