--- a/style/main.css
+++ b/style/main.css
@@ -133,6 +133,9 @@ header ul li {
 header.logo {
     width: 100px;
 }
+header .col-1 {
+    background-color: #F7F4F4;
+}
 
 
 /* Основное содержимое */
