--- a/style/main.css
+++ b/style/main.css
@@ -133,7 +133,7 @@ header ul li {
 header.logo {
     width: 100px;
 }
-header .col-1 {
+header .container.col-1 {
     background-color: #F7F4F4;
 }
 
