--- a/style/main.css
+++ b/style/main.css
@@ -133,7 +133,9 @@ header ul li {
 header.logo {
     width: 100px;
 }
-
+.col-1 {
+    background-color: #F7F4F4;
+}
 
 
 /* Основное содержимое */
