--- a/style/main.css
+++ b/style/main.css
@@ -119,7 +119,6 @@ img {
 /* Шапка сайта */
 header {
     flex: 0 0 auto;
-    background-color: black;
     height: 100px;
     color: white;
 }
@@ -136,7 +135,9 @@ header.logo {
 header.col-1 {
     background-color: #F7F4F4;
 }
-
+header.col-4 {
+    background-color: black;
+}
 
 /* Основное содержимое */
 main {
