--- a/style/main.css
+++ b/style/main.css
@@ -137,6 +137,14 @@ header > div.container {
 header ul li {
     margin-right: 20px;
 }
+header.col-1 {
+    flex: 1;
+    background-color: #F7F4F4;
+}
+header.col-4 {
+    flex: 4;
+    background-color: black;
+}
 
 
 /* Основное содержимое */
