--- a/style/main.css
+++ b/style/main.css
@@ -135,6 +135,7 @@ header > div.container {
 }
 header ul li {
     margin-right: 20px;
+    text-align: center;
 }
 header .col-1 {
     background-color: #F7F4F4;
