--- a/style/main.css
+++ b/style/main.css
@@ -133,6 +133,9 @@ header > div.container {
     height: 100%;
     align-items: center;
 }
+header ul {
+    text-align: center;
+}
 header ul li {
     margin-right: 20px;
     text-align: center;
