--- a/style/main.css
+++ b/style/main.css
@@ -149,6 +149,10 @@ header .col-4 {
     background-color: black;
     height: 70px;
 }
+header .col-4 {
+    background-color: #f2e8c9;
+    height: 100%;
+}
 
 
 /* Основное содержимое */
