--- a/style/main.css
+++ b/style/main.css
@@ -138,6 +138,7 @@ header ul {
     text-align: center;
     background-color: black;
     height: 70px;
+    align-items: center;
 }
 header ul li {
     margin-right: 20px;
