--- a/style/main.css
+++ b/style/main.css
@@ -156,7 +156,7 @@ header .col-4 {
 main {
     display: flex;
     flex: 1 0 auto;
-    background-color: white;
+    background-color: #F7F4F4;
 }
 main > div.container {
     flex: 1 0 auto;
