--- a/style/main.css
+++ b/style/main.css
@@ -214,8 +214,8 @@ footer li {
     line-height: 2em;
 }
 footer .col-1 {
-    background-color: #F7F4F4;
+    background-color: black;
 }
 footer .col-3 {
-    background-color: #F7F4F4;
+    background-color: black;
 }
