--- a/style/main.css
+++ b/style/main.css
@@ -137,6 +137,11 @@ header ul {
     justify-content: center;
     margin-top: 10px;
 }
+header ul:hover {
+    background-color: red;
+    height: 70px;
+    text-decoration: none;
+}
 header ul li {
     margin-right: 20px;
     text-align: center;
