--- a/style/main.css
+++ b/style/main.css
@@ -141,6 +141,7 @@ header ul li:hover {
     background-color: red;
     height: 70px;
     text-decoration: none;
+    text-decoration: underline;
 }
 header ul li {
     margin-right: 20px;
