--- a/style/main.css
+++ b/style/main.css
@@ -219,12 +219,12 @@ footer a:hover {
 footer li {
     line-height: 2em;
 }
-footer .col-1 {
+footer .col-2 {
     background-color: black;
 }
-footer .col-5 {
+footer .col-3 {
     background-color: black;
-    margin-left: 15px;
+    justify-content: center;
 }
 footer .img {
     width: 100%;
