--- a/style/main.css
+++ b/style/main.css
@@ -221,12 +221,10 @@ footer li {
 }
 footer .col-1 {
     background-color: black;
+    width: 50px;
+    height: 50px;
 }
 footer .col-5 {
     background-color: black;
     justify-content: center;
-}
-footer .img {
-    width: 10%;
-    height: 10%;
 }
