--- a/style/main.css
+++ b/style/main.css
@@ -145,6 +145,7 @@ header ul li:hover {
     text-decoration: underline;
 }
 header ul li {
+    margin-right: 30px;
     text-align: center;
     margin-top: 35px;
 }
@@ -221,10 +222,12 @@ footer li {
 }
 footer .col-1 {
     background-color: black;
-    width: 50px;
-    height: 50px;
 }
 footer .col-5 {
     background-color: black;
     justify-content: center;
+}
+footer a {
+    width: 50px;
+    height: 50px;
 }
