--- a/style/main.css
+++ b/style/main.css
@@ -227,7 +227,7 @@ footer .col-5 {
     background-color: black;
     justify-content: center;
 }
-footer a {
+footer a img {
     width: 50px;
     height: 50px;
 }
