--- a/style/main.css
+++ b/style/main.css
@@ -228,6 +228,7 @@ footer .col-5 {
     justify-content: center;
 }
 footer a img {
-    width: 50px;
-    height: 50px;
+    width: 30px;
+    height: 30px;
+    margin-bottom: 25px;
 }
