--- a/style/main.css
+++ b/style/main.css
@@ -198,7 +198,7 @@ aside li {
 footer {
     flex: 0 0 auto;
     background-color: white;
-    height: 70px;
+
     color: white;
 }
 footer > div.container {
@@ -222,10 +222,12 @@ footer li {
 }
 footer .col-1 {
     background-color: black;
+    height: 50px;
 }
 footer .col-5 {
     background-color: black;
-    justify-content: center;
+    color: white;
+    height: 50px;
 }
 footer a img {
     width: 30px;
