--- a/style/main.css
+++ b/style/main.css
@@ -97,8 +97,16 @@ img {
 .col-1 {
     flex: 1;
 }
+.col-1-1 {
+    flex: 1;
+    background-color: white;
+}
 .col-2 {
     flex: 2;
+}
+.col-2-1 {
+    flex: 2;
+    background-color: white;
 }
 .col-3 {
     flex: 3;
