--- a/style/main.css
+++ b/style/main.css
@@ -182,10 +182,6 @@ main {
     background-position: center center;
     background-size: cover;
 }
-main .container2 {
-    margin-top: 360px;
-    background-color: white;
-}
 section {
     flex: 3 0 auto;
     padding: 0 15px;
@@ -212,6 +208,10 @@ aside a:hover {
 }
 aside li {
     line-height: 1.5em;
+}
+.text {
+    background-color: white;
+    color: black;
 }
 
 
