--- a/style/main.css
+++ b/style/main.css
@@ -174,6 +174,7 @@ header .col-1 {
     display: flex;
     flex: 1 0 auto;
     background-color: white;
+    height: 400px;
 }
 .maintop > div.container {
     flex: 1 0 auto;
