--- a/style/main.css
+++ b/style/main.css
@@ -224,9 +224,12 @@ aside li {
     margin-left: 20px;
     margin-right: 20px;
 }
+.line {
+    background-color: white;
+}
 .line .col-5 {
     background-color: gray;
-    height: 10px;
+    height: 3px;
 }
 
 
