--- a/style/main.css
+++ b/style/main.css
@@ -229,8 +229,9 @@ aside li {
 .line .col-4 {
     background-color: gray;
     height: 3px;
-    width: 600px;
+    width: 800px;
     margin-top: 20px;
+    margin-left: 600px;
 }
 
 
