--- a/style/main.css
+++ b/style/main.css
@@ -142,6 +142,7 @@ header ul {
     text-align: center;
     background-color: black;
     height: 70px;
+    width: 800px;
     justify-content: center;
     margin-top: 10px;
 }
@@ -156,16 +157,6 @@ header ul li {
     margin-right: 30px;
     text-align: center;
     margin-top: 35px;
-}
-header .col-5 {
-    background-color: #F7F4F4;
-    height: 100%;
-    justify-content: center;
-}
-.col-1 {
-    background-color: #F7F4F4;
-    height: 100%;
-    justify-content: center;
 }
 
 
