--- a/style/main.css
+++ b/style/main.css
@@ -205,7 +205,7 @@ aside li {
 .mainone {
     background-color: white;
 }
-.mainone img {
+.col-1-1 img {
     height: 40px;
     width: 40px;
     margin-top: 20px;
