--- a/style/main.css
+++ b/style/main.css
@@ -125,7 +125,8 @@ header {
     flex: 0 0 auto;
     height: 100px;
     width: 800px;
-    background-color: #F7F4F4;
+    background-color: white;
+    justify-content: center;
 }
 header > div.container {
     height: 100%;
@@ -163,10 +164,6 @@ header ul li {
     display: flex;
     flex: 1 0 auto;
     background-color: white;
-}
-.one > div.container {
-    flex: 1 0 auto;
-    background-color: #F7F4F4;
 }
 section {
     flex: 3 0 auto;
