--- a/style/main.css
+++ b/style/main.css
@@ -18,7 +18,8 @@ body {
     text-decoration: none !important;
     color: white;
     background-color: red;
-    height: 50px;
+    height: 300%;
+    width: 300%;
     border-radius: 5px;
 }
 .button1:hover {
