--- a/style/main.css
+++ b/style/main.css
@@ -139,6 +139,7 @@ header ul {
     justify-content: center;
     margin-top: 10px;
     height: 70px;
+
 }
 header ul li:hover {
     background-color: red;
@@ -148,7 +149,8 @@ header ul li:hover {
 }
 header ul li {
     text-align: center;
-    margin-top: 10px;
+    margin-right: 20px;
+    justify-content: center;
 }
 
 
