--- a/style/main.css
+++ b/style/main.css
@@ -150,6 +150,7 @@ header ul li:hover {
 header ul li {
     text-align: center;
     margin-right: 20px;
+    margin-top: 30px;
     justify-content: center;
 }
 
