--- a/style/main.css
+++ b/style/main.css
@@ -144,6 +144,7 @@ header ul {
 header ul li:hover {
     background-color: red;
     height: 70px;
+    margin-bottom: 20px;
     text-decoration: none;
     text-decoration: underline;
 }
