--- a/style/main.css
+++ b/style/main.css
@@ -177,28 +177,29 @@ header ul li {
     display: flex;
     flex: 1 0 auto;
     background-color: white;
-    text-align: center;
 }
 .four {
     display: flex;
     flex: 1 0 auto;
     background-color: white;
+    text-align: center;
 }
 .five {
     display: flex;
     flex: 1 0 auto;
     background-color: white;
 }
-.five img {
-    height: 70%;
-    width: 70%;
-    margin-right: 20px;
-}
 .six {
     display: flex;
     flex: 1 0 auto;
     background-color: white;
 }
+.six img {
+    height: 70%;
+    width: 70%;
+    margin-right: 20px;
+}
+
 section {
     flex: 3 0 auto;
     padding: 0 15px;
