--- a/style/agnecy.css
+++ b/style/agnecy.css
@@ -192,6 +192,11 @@ header ul li {
     background-color: white;
 }
 .five ul {
+    text-decoration: none;
+    text-decoration: underline;
+    color: black;
+}
+.five ul {
     text-align: center;
     background-color: white;
     justify-content: center;
