--- a/style/agnecy.css
+++ b/style/agnecy.css
@@ -29,8 +29,7 @@ body {
 .container {
     display: flex;
     width: 100%;
-    max-width: 1200px; /*максимальная ширина может иметь другое значение*/
-    padding: 0 15px;
+    max-width: 1024px;
     margin: 0 auto;
 }
 .button {
@@ -134,7 +133,7 @@ header ul {
 header li a {
     padding: 30px 10px;
     text-decoration: none;
-    color: #dedede;
+    color: white;
 }
 header > div.container {
     height: 100%;
@@ -191,7 +190,6 @@ header li a:hover {
 }
 .five ul {
     text-decoration: none;
-    text-decoration: underline;
     color: black;
 }
 .five ul {
@@ -201,7 +199,6 @@ header li a:hover {
     margin-top: 10px;
     height: 70px;
     text-decoration: none;
-    text-decoration: underline;
     color: black;
     margin-right: 20px;
 }
