--- a/style/agnecy.css
+++ b/style/agnecy.css
@@ -3,8 +3,6 @@
 @import url("https://marksheet.io/css/reset.css");
 
 
-
-
 /* Базовые стили */
 html {
     height: 100%;
@@ -14,67 +12,19 @@ body {
     flex-direction: column;
     height: 100%;
 }
-.button1 {
-    text-decoration: none !important;
-    color: white;
-    background-color: red;
-    height: 300%;
-    width: 300%;
-    border-radius: 5px;
-}
-.button1:hover {
-    background-color: black;
-    text-decoration: none;
-}
 .container {
     display: flex;
     width: 100%;
     max-width: 1024px;
     margin: 0 auto;
 }
-.button {
-    height: 50px;
-    /*width:100px;*/
-}
-.container {
-    padding: 0 15px;
-}
-body {
-    font-size: 14px;
-}
-h1 {
-    font-size: 2.4em;
-    padding: .8em 0 1.2em 0;
-}
-h2 {
-    font-size: 2.2em;
-    padding: .8em 0 1.0em 0;
-}
-h3 {
-    font-size: 2.0em;
-    padding: .8em 0 0.8em 0;
-}
-h4 {
-    font-size: 1.8em;
-    padding: .8em 0 0.6em 0;
-}
-h5 {
-    font-size: 1.6em;
-    padding: .8em 0 0.6em 0;
-}
-h5 {
-    font-size: 1.4em;
-    padding: .8em 0 0.6em 0;
-}
 
 
 /* Предустановки */
 .row {
-    display: flex;
     flex-direction: row;
 }
 .column {
-    display: flex;
     flex-direction: column;
 }
 nav ul {
@@ -82,18 +32,15 @@ nav ul {
     padding: 0;
     list-style: none;
 }
-.b-right {
-    border-right: 1px solid #e5e5e5;
-}
 
 
 /* Гибкая верстка */
+img {
+    width: 100%;
+    max-width: 100%;
+}
 .col-1 {
     flex: 1;
-}
-.col-1-1 {
-    flex: 1;
-    background-color: #F7F4F4;
 }
 .col-2 {
     flex: 2;
@@ -107,9 +54,8 @@ nav ul {
 .col-5 {
     flex: 5;
 }
-.col-5-1 {
-    flex: 5;
-    background-color: #F7F4F4;
+.col-6 {
+    flex: 6;
 }
 @media(max-width: 800px) {
     .container {
@@ -207,7 +153,6 @@ section {
     height: 50%;
     width: 50%;
 }
-
 
 
 /* Подвал сайта */
