--- a/style/agnecy.css
+++ b/style/agnecy.css
@@ -18,6 +18,30 @@ body {
     max-width:  1024px;
     margin: 0 auto;
 }
+h1 {
+    font-size: 2.4em;
+    padding: .8em 0 1.2em 0;
+}
+h2 {
+    font-size: 2.2em;
+    padding: .6em 0 1.0em 0;
+}
+h3 {
+    font-size: 2.0em;
+    padding: .4em 0 .8em 0;
+}
+h4 {
+    font-size: 1.8em;
+    padding: .2em 0 .6em 0;
+}
+h5 {
+    font-size: 1.6em;
+    padding: .8em 0 1.2em 0;
+}
+h6 {
+    font-size: 1.4em;
+    padding: .8em 0 1.2em 0;
+}
 
 
 /* Предустановки */
