--- a/style/agnecy.css
+++ b/style/agnecy.css
@@ -159,6 +159,7 @@ section {
     color: black;
     border-radius: 5px;
     text-decoration: none;
+    padding: 10px;
 }
 .button:hover {
     background-color: black;
