--- a/style/agnecy.css
+++ b/style/agnecy.css
@@ -163,11 +163,14 @@ section {
     text-decoration: none;
 }
 .prod > div {
-    justify-content: space-around;
+    justify-content: center;
     display: flex;
 }
 .prod img {
     width: 250px;
+    margin-left: 25px;
+    margin-right: 25px;
+    margin-top: 25px;
 }
 .products {
     flex: 1 0 auto;
