--- a/style/agnecy.css
+++ b/style/agnecy.css
@@ -152,7 +152,7 @@ section {
 }
 .button {
     background-color: red;
-    color: black;
+    color: white;
     border-radius: 5px;
     text-decoration: none;
     padding: 10px;
