--- a/style/agnecy.css
+++ b/style/agnecy.css
@@ -173,7 +173,7 @@ section {
     margin-top: 20px;
 }
 .teamtop {
-    align-items: center;
+    text-align: center;
 }
 .products {
     flex: 1 0 auto;
@@ -214,11 +214,11 @@ section {
 }
 .subtext1 {
     color: white;
-    align-items: center;
+    text-align: center;
 }
 .subtext2 {
     color: gray;
-    align-items: center;
+    text-align: center;
 }
 
 
