--- a/style/agnecy.css
+++ b/style/agnecy.css
@@ -220,6 +220,18 @@ section {
     color: gray;
     text-align: center;
 }
+.button1 {
+    background-color: red;
+    color: white;
+    border-radius: 5px;
+    text-decoration: none;
+    padding: 10px;
+}
+.button1:hover {
+    background-color: white;
+    color: black;
+    text-decoration: none;
+}
 
 
 /* Подвал сайта */
