--- a/style/agnecy.css
+++ b/style/agnecy.css
@@ -42,6 +42,13 @@ h6 {
     font-size: 1.4em;
     padding: .2em 0 0.6em 0;
 }
+table {
+  border-collapse: collapse;
+}
+
+td {
+  border-bottom: 2px solid lightgray;
+}
 
 
 /* Предустановки */
