--- a/style/agnecy.css
+++ b/style/agnecy.css
@@ -43,11 +43,16 @@ h6 {
     padding: .2em 0 0.6em 0;
 }
 table {
-  border-collapse: collapse;
+    border-collapse: collapse;
 }
 
 td {
-  border-bottom: 2px solid lightgray;
+    border-bottom: 2px solid black;
+    padding: 5px;
+    padding-right: 70px;
+}
+th {
+    border-bottom: 2px solid black;
 }
 
 
