--- a/style/agnecy.css
+++ b/style/agnecy.css
@@ -49,10 +49,11 @@ table {
 td {
     border-bottom: 2px solid black;
     padding: 5px;
-    padding-right: 70px;
+    padding-right: 100px;
 }
 th {
     border-bottom: 2px solid black;
+    background-color: #F4F4F4;
 }
 
 
