--- a/style/agnecy.css
+++ b/style/agnecy.css
@@ -53,7 +53,9 @@ td {
 }
 th {
     border-bottom: 2px solid black;
-    background-color: #F4F4F4;
+    background-color: black;
+    color: white;
+    padding: 5px;
 }
 
 
