--- a/style/agnecy.css
+++ b/style/agnecy.css
@@ -48,14 +48,15 @@ table {
 
 td {
     border-bottom: 2px solid black;
-    padding: 5px;
+    padding: 7px;
     padding-right: 100px;
 }
 th {
     border-bottom: 2px solid black;
     background-color: black;
     color: white;
-    padding: 5px;
+    padding: 7px;
+    text-align: left;
 }
 
 
